IGNORE all release directories

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
-*/release
+0414-PixelPopDefenseZone/release
+0514-Molesweeper/release
 1gameamonth.sublime-workspace
 1gameamonth.sublime-project
 *.love
