Adding HyperMiner release dir to IGNORE entries

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 0414-PixelPopDefenseZone/release
 0514-Molesweeper/release
+0614-Molesweeper/release
 1gameamonth.sublime-workspace
 1gameamonth.sublime-project
 *.love
