Adding project folders to Ignore file(because now they won't be managed in the master branch)

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
 1gameamonth.sublime-workspace
 1gameamonth.sublime-project
 *.love
+0414-PixelPopDefenseZone
+0514-Molesweeper
+0614-HyperMiner
+0714-ColonizationChess
